import { describe, expect, it } from "vitest";

import { transformCode } from "./test-helpers/transform.js";

describe("hoist-jest", () => {
	it("should hoist jest.mock above imports", () => {
		expect.assertions(1);

		const input = `
import { jest } from "@rbxts/jest-globals";
import { foo } from "./foo";
jest.mock("./foo");
`;

		expect(transformCode(input)).toMatchSnapshot();
	});

	it("should hoist jest.unmock above imports", () => {
		expect.assertions(1);

		const input = `
import { jest } from "@rbxts/jest-globals";
import { foo } from "./foo";
jest.unmock("./foo");
`;

		expect(transformCode(input)).toMatchSnapshot();
	});

	it("should hoist both mock and unmock", () => {
		expect.assertions(1);

		const input = `
import { jest } from "@rbxts/jest-globals";
import { a } from "./a";
jest.mock("./a");
jest.unmock("./b");
`;

		expect(transformCode(input)).toMatchSnapshot();
	});

	it("should keep @rbxts/jest-globals import first", () => {
		expect.assertions(1);

		const input = `
import { jest } from "@rbxts/jest-globals";
import { foo } from "./foo";
jest.mock("./foo");
`;

		expect(transformCode(input)).toMatchSnapshot();
	});

	it("should hoist mock-prefixed variables", () => {
		expect.assertions(1);

		const input = `
import { jest } from "@rbxts/jest-globals";
import { foo } from "./foo";
const mockFoo = jest.fn();
jest.mock("./foo", () => ({ foo: mockFoo }));
`;

		expect(transformCode(input)).toMatchSnapshot();
	});

	// cspell:ignore dontMock
	it("should leave non-hoistable jest calls in place", () => {
		expect.assertions(1);

		const input = `
import { foo } from "./foo";
jest.dontMock("./foo");
`;

		expect(transformCode(input)).toMatchSnapshot();
	});

	it("should ignore shadowed jest binding", () => {
		expect.assertions(1);

		const input = `
import { foo } from "./foo";
const jest = { mock: () => {} };
jest.mock("./foo");
`;

		expect(transformCode(input)).toMatchSnapshot();
	});

	it("should ignore non-jest objects", () => {
		expect.assertions(1);

		const input = `
import { foo } from "./foo";
other.mock("./foo");
`;

		expect(transformCode(input)).toMatchSnapshot();
	});

	it("should preserve factory functions in jest.mock", () => {
		expect.assertions(1);

		const input = `
import { jest } from "@rbxts/jest-globals";
import { foo } from "./foo";
jest.mock("./foo", () => ({ default: 42 }));
`;

		expect(transformCode(input)).toMatchSnapshot();
	});

	it("should not hoist plain function calls", () => {
		expect.assertions(1);

		const input = `
import { foo } from "./foo";
foo("./bar");
`;

		expect(transformCode(input)).toMatchSnapshot();
	});

	it("should not hoist non-call expression statements", () => {
		expect.assertions(1);

		const input = `
import { foo } from "./foo";
x = 5;
`;

		expect(transformCode(input)).toMatchSnapshot();
	});

	it("should pass through unchanged when no jest calls", () => {
		expect.assertions(1);

		const input = `
import { foo } from "./foo";
console.log(foo);
`;

		expect(transformCode(input)).toMatchSnapshot();
	});

	it("should be idempotent when already hoisted", () => {
		expect.assertions(1);

		const input = `
import { jest } from "@rbxts/jest-globals";
jest.mock("./foo");
import { foo } from "./foo";
`;

		expect(transformCode(input)).toMatchSnapshot();
	});

	it("should hoist aliased jest import calls", () => {
		expect.assertions(1);

		const input = `
import { jest as j } from "@rbxts/jest-globals";
import { foo } from "./foo";
j.mock("./foo");
`;

		const result = transformCode(input);

		expect(result).toMatch(/^import.*jest as j.*\nj\.mock/);
	});

	it("should hoist namespace jest import calls", () => {
		expect.assertions(1);

		const input = `
import * as JG from "@rbxts/jest-globals";
import { foo } from "./foo";
JG.jest.mock("./foo");
`;

		const result = transformCode(input);

		expect(result).toMatch(/^import \* as JG.*\nJG\.jest\.mock/);
	});

	it("should not hoist namespace without .jest accessor", () => {
		expect.assertions(1);

		const input = `
import * as JG from "@rbxts/jest-globals";
import { foo } from "./foo";
JG.mock("./foo");
`;

		const result = transformCode(input);

		expect(result).toMatch(/import.*foo.*\nJG\.mock/);
	});

	it("should not hoist with side-effect jest-globals import (no binding)", () => {
		expect.assertions(1);

		const input = `
import "@rbxts/jest-globals";
import { foo } from "./foo";
jest.mock("./foo");
`;

		const result = transformCode(input);

		expect(result).toMatch(/import.*foo.*\njest\.mock/);
	});

	it("should not hoist with non-jest named import (no binding)", () => {
		expect.assertions(1);

		const input = `
import { describe } from "@rbxts/jest-globals";
import { foo } from "./foo";
jest.mock("./foo");
`;

		const result = transformCode(input);

		expect(result).toMatch(/import.*foo.*\njest\.mock/);
	});

	it("should not hoist when no jest-globals import exists", () => {
		expect.assertions(1);

		const input = `
import { foo } from "./foo";
jest.mock("./foo");
`;

		const result = transformCode(input);

		expect(result).toMatch(/import.*foo.*\njest\.mock/);
	});

	it("should not hoist when jest is shadowed after import", () => {
		expect.assertions(1);

		const input = `
import { jest } from "@rbxts/jest-globals";
import { foo } from "./foo";
const jest = { mock: () => {} };
jest.mock("./foo");
`;

		const result = transformCode(input);

		expect(result).toMatch(/const jest.*\njest\.mock/);
	});

	it("should not hoist when aliased jest is shadowed after import", () => {
		expect.assertions(1);

		const input = `
import { jest as j } from "@rbxts/jest-globals";
import { foo } from "./foo";
const j = { mock: () => {} };
j.mock("./foo");
`;

		const result = transformCode(input);

		expect(result).toMatch(/const j.*\nj\.mock/);
	});

	it("should not hoist when namespace is shadowed after import", () => {
		expect.assertions(1);

		const input = `
import * as JG from "@rbxts/jest-globals";
import { foo } from "./foo";
const JG = { jest: { mock: () => {} } };
JG.jest.mock("./foo");
`;

		const result = transformCode(input);

		expect(result).toMatch(/const JG.*\nJG\.jest\.mock/);
	});

	it("should not hoist when jest is shadowed by function declaration", () => {
		expect.assertions(1);

		const input = `
import { jest } from "@rbxts/jest-globals";
import { foo } from "./foo";
function jest() {}
jest.mock("./foo");
`;

		const result = transformCode(input);

		expect(result).toMatch(/function jest\(\).*\njest\.mock/);
	});

	it("should still hoist when non-jest name is shadowed", () => {
		expect.assertions(1);

		const input = `
import { jest } from "@rbxts/jest-globals";
import { foo } from "./foo";
const other = { mock: () => {} };
jest.mock("./foo");
`;

		const result = transformCode(input);

		expect(result).toMatch(/^import.*jest.*\njest\.mock/);
	});
});
