// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`hoist-jest > should be idempotent when already hoisted 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo");
import { foo } from "./foo";
"
`;

exports[`hoist-jest > should hoist both mock and unmock 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./a");
jest.unmock("./b");
import { a } from "./a";
"
`;

exports[`hoist-jest > should hoist jest.mock above imports 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo");
import { foo } from "./foo";
"
`;

exports[`hoist-jest > should hoist jest.unmock above imports 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.unmock("./foo");
import { foo } from "./foo";
"
`;

exports[`hoist-jest > should hoist mock-prefixed variables 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo", () => ({ foo: mockFoo }));
import { foo } from "./foo";
const mockFoo = jest.fn();
"
`;

exports[`hoist-jest > should ignore non-jest objects 1`] = `
"import { foo } from "./foo";
other.mock("./foo");
"
`;

exports[`hoist-jest > should ignore shadowed jest binding 1`] = `
"import { foo } from "./foo";
const jest = { mock: () => { } };
jest.mock("./foo");
"
`;

exports[`hoist-jest > should keep @rbxts/jest-globals import first 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo");
import { foo } from "./foo";
"
`;

exports[`hoist-jest > should leave non-hoistable jest calls in place 1`] = `
"import { foo } from "./foo";
jest.dontMock("./foo");
"
`;

exports[`hoist-jest > should not hoist non-call expression statements 1`] = `
"import { foo } from "./foo";
x = 5;
"
`;

exports[`hoist-jest > should not hoist plain function calls 1`] = `
"import { foo } from "./foo";
foo("./bar");
"
`;

exports[`hoist-jest > should pass through unchanged when no jest calls 1`] = `
"import { foo } from "./foo";
console.log(foo);
"
`;

exports[`hoist-jest > should preserve factory functions in jest.mock 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo", () => ({ default: 42 }));
import { foo } from "./foo";
"
`;
